# AI-hackathon-3

./: .gitignore  Dockerfile  LICENSE  LogCallbackHandler.py  README.md  analize_llm.py  analyze_llm.py  build.sh  data_processing.ipynb  generate_question.py  llm.py  main.py  memory.py  pdf_analyze 2.py  pdf_analyze.py  pyproject.toml  restart_docker.sh  setup_vector_store.py  vector_store.py
.github/: CODEOWNERS
.github/workflows/: deploy.yml
chroma_wang/: chroma.sqlite3
docs/: ai.md  backend.md  frontend.md
llm/: analyze.py  chat_resumes.py  generate_question.py  interview.py  log_callback_handler.py  model.py  recommend.py  vector_store.py
schemas/: enums.py  request.py  response.py
tests/: test_load_pdf.py
